[metadata]
name = Portman
version = 1.0
author = L
description = Automatically open port
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Snapwhiz914/portman
project_urls =
    Bug Tracker = https://github.com/Snapwhiz914/LACS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    schema
    pyyaml
    requests
    ipaddress

[options.entry_points]
console_scripts =
        start-LACS = LACS:main.main