[metadata]
name = Portman
version = 1.0
author = L
description = Automatically open port
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Snapwhiz914/portman
project_urls =
    Bug Tracker = https://github.com/Snapwhiz914/LACS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    beautifulsoup4==4.11.2
    pandas==1.4.4
    python_nginx==1.5.7
    PyYAML==6.0
    requests==2.27.1
    schema==0.7.5

[options.entry_points]
console_scripts =
        portman = Portman:main.main